--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -116,3 +116,8 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 .inspace-30{padding:30px;}
 .inspace-50{padding:50px;}
 .inspace-80{padding:80px;}
+
+.btmspace-15 {
+    border: solid;
+    border-color: red;
+}
